# clv-vpncore

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  NOTICE  README.md  cmake-variants.yaml  coverage.md  format.sh  run_tests.sh
configs/: client_config.json  client_config_large_certs.json  openvpn_config.json  sample_client.ovpn  server_config.json  server_config_large_certs.json  simple_vpn_client_only.json  simple_vpn_config.json  simple_vpn_server_only.json
demos/: CMakeLists.txt  README.md  generate_client_config.cpp  ovpn_parser_demo.cpp  simple_vpn.cpp  simple_vpn_client.cpp  simple_vpn_server.cpp
integration/: README.md  ctest_it1.sh  ctest_it10.sh  ctest_it11.sh  ctest_it12.sh  ctest_it13.sh  ctest_it14.sh  ctest_it15.sh  ctest_it16.sh  ctest_it17.sh  ctest_it18.sh  ctest_it19.sh  ctest_it2.sh  ctest_it3.sh  ctest_it4.sh  ctest_it5.sh  ctest_it6.sh  ctest_it7.sh  ctest_it8.sh  ctest_it9.sh  ctest_itr1.sh  ctest_itr2.sh  ctest_itr3.sh  ctest_itr4.sh  ctest_itr5.sh  run_integration.sh  test_it10_c2c_route_bypass.sh  test_it11_c2c_full_bypass.sh  test_it12_v2_handshake.sh  test_it13_v2_multi_client.sh  test_it14_mixed_client_dco.sh  test_it15_userspace_server_dco_clients.sh  test_it16_ovpn_server_handshake.sh  test_it17_ovpn_client.sh  test_it18_ovpn_server_v2.sh  test_it19_ipv6_underlay.sh  test_it1_handshake.sh  test_it2_multi_client.sh  test_it3_mesh.sh  test_it4_dco.sh  (+11 more)
integration/configs/: it_client.json  it_client_dco.json  it_client_no_reneg.json  it_client_rekey.json  it_client_tcp.json  it_client_v2.json  it_client_v2_c1.json  it_client_v2_c2.json  it_server.json  it_server_dco.json  it_server_masq.json  it_server_no_c2c.json  it_server_reconnect.json  it_server_rekey.json  it_server_rekey_dco.json  it_server_rekey_tcp.json  it_server_tcp.json  it_server_v2.json  mesh_node_a.json  mesh_node_b.json  mesh_node_c.json  mesh_node_d.json
integration/netns/: setup_mesh.sh  setup_vpn.sh  teardown_mesh.sh  teardown_vpn.sh
perf/: README.md  probe_dco.sh  run_vpn_perf.sh
perf/configs/: client_dco_udp.json  client_user_tcp.json  client_user_udp.json  ovpn_dco_udp.ovpn  ovpn_user_tcp.ovpn  ovpn_user_udp.ovpn  server_dco_udp.json  server_ovpn_dco_udp.conf  server_ovpn_user_tcp.conf  server_ovpn_user_udp.conf  server_user_tcp.json  server_user_udp.json
perf/lib/: perf_common.sh  perf_profiles.sh  perf_remote.sh
scripts/: deploy_client.sh  test_handshake.sh  test_large_certs.sh
src/: client_control_adapter.h  client_data_adapter.h  client_dco_channel.h  client_tcp_channel.h  client_udp_channel.h  cpu_affinity.cpp  cpu_affinity.h  data_path_stats.h  data_transport.h  dco_client_data_mixin.h  dco_core.cpp  dco_core.h  dco_netlink_ops.h  dco_server_data_mixin.h  dco_utils.h  iface_utils.h  ip_pool_manager.cpp  ip_pool_manager.h  keepalive_loop.h  log_subsystems.cpp  log_subsystems.h  multi_peer_policy.h  p2p_policy.h  route_utils.h  routing_table.cpp  routing_table.h  scoped_ipv6_masquerade.cpp  scoped_ipv6_masquerade.h  scoped_masquerade.cpp  scoped_masquerade.h  scoped_proc_toggle.h  server_control_base.h  server_data_adapter.h  server_dco_control_adapter.h  server_tcp_control_adapter.h  server_udp_control_adapter.h  socket_utils.h  transport_mode.h  tx_partition.h  udp_client_mixin.h  (+11 more)
src/openvpn/: aead_utils.h  client_config_generator.cpp  client_config_generator.h  client_session.cpp  client_session.h  config_exchange.cpp  config_exchange.h  connection.cpp  connection.h  control_channel.cpp  control_channel.h  control_channel_fragment.h  control_plane_helpers.cpp  control_plane_helpers.h  crypto_algorithms.h  data_channel.cpp  data_channel.h  data_channel_hmac.h  data_path_engine.h  dco_data_channel.cpp  dco_data_channel.h  key_derivation.cpp  key_derivation.h  ovpn_config_parser.cpp  ovpn_config_parser.h  ovpn_dco.h  packet.cpp  packet.h  protocol_constants.h  push_exchange_helpers.cpp  push_exchange_helpers.h  session_manager.cpp  session_manager.h  tcp_data_channel.h  tls_context.cpp  tls_context.h  tls_crypt.cpp  tls_crypt.h  tls_crypt_v2.cpp  tls_crypt_v2.h  (+5 more)
src/transport/: batch_constants.h  connector.cpp  connector.h  listener.cpp  listener.h  packet_arena.h  transport.cpp  transport.h  udp_batch.cpp  udp_batch.h
test_data/: .gitignore  README.md  test_client.ovpn  test_client_large.ovpn
test_data/certs/: ca.crt  ca.key  ca.srl  ca_large.crt  ca_large.key  ca_large.srl  client.crt  client.key  client_large.crt  client_large.key  dh.pem  dh2048.pem  gen_large_certs.sh  gen_tls_crypt_v2_keys.sh  server.crt  server.key  server_large.crt  server_large.key  server_small.crt  server_small.key  (+5 more)
tests/: AsanVerification_tests.cpp  CMakeLists.txt  aead_utils_tests.cpp  client_config_generator_tests.cpp  config_exchange_tests.cpp  control_channel_tests.cpp  data_channel_tests.cpp  ip_pool_manager_tests.cpp  ipv4_utils_tests.cpp  key_derivation_tests.cpp  log_subsystems_tests.cpp  log_utils_tests.cpp  openvpn_packet_tests.cpp  ovpn_config_parser_tests.cpp  routing_table_tests.cpp  scoped_masquerade_tests.cpp  server_helpers_tests.cpp  session_manager_tests.cpp  tls_context_tests.cpp  tls_crypt_tests.cpp  tls_crypt_v2_tests.cpp  transport_ipv6_connectivity_tests.cpp  transport_mode_tests.cpp  transport_tests.cpp  tun_device_tests.cpp  tx_spsc_tests.cpp  udp_batch_tests.cpp  udp_engine_tests.cpp  vpn_client_tests.cpp  vpn_config_tests.cpp  vpn_server_integration_tests.cpp
(+3 files in other folders)
